# Eagna

./: .gitignore  Makefile  README.md  buildspec.yml  firebase.json  move.py  netlify.toml
backend/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  app.yaml  buildspec.yml  cloudbuild.yaml  cron.yaml  demo_data.csv  demo_data.sql  diesel.toml  docker-compose.yml  initialize.sql  main.py  market_def.sample.json  requirements.txt
backend-rust/: :  Cargo.toml  Dockerfile  Dockerfile-debug  Makefile  build-with-env.sh  cloudbuild.yaml  diesel.toml
backend-rust/appengine/: entrypoint.sh
backend-rust/migrations/2019-04-16-232616_initialize/: down.sql  up.sql
backend-rust/src/: api.rs  app.rs  auth.rs  infra.rs  lib.rs  lmsr.rs  main.rs  postgres.rs  redis.rs
backend-rust/src/api/: access_token.rs  auth.rs  failure_response.rs  markets.rs  me.rs
backend-rust/src/api/cronjob/: open_market.rs
backend-rust/src/api/me/: markets.rs  orders.rs
backend-rust/src/app/: access_token.rs  auth.rs  cronjob.rs  failure_response.rs  markets.rs  me.rs  users.rs
backend-rust/src/app/cronjob/: close_market.rs  open_market.rs
backend-rust/src/app/markets/: orders.rs
backend-rust/src/app/me/: markets.rs
backend-rust/src/domain/: models.rs  services.rs
backend-rust/src/domain/models/: access_token.rs  lmsr.rs  market.rs  num.rs  user.rs
backend-rust/src/domain/services/: access_token_store.rs  market_store.rs  order_store.rs  store.rs  transactional_store.rs  user_store.rs
backend-rust/src/infra/: firebase.rs  market_store.rs  postgres.rs  store.rs
backend-rust/src/infra/postgres/: market_store.rs  schema.rs  types.rs  user_store.rs
backend-rust/src/postgres/: schema.rs
backend-rust/tests/: access_token.rs  api.rs  auth.rs
backend-rust/tests/setup/: feed_data.rs
backend-rust/utils/: Cargo.toml
backend-rust/utils/src/: lib.rs  market.rs  user.rs
backend/app/: Cargo.toml
backend/app/src/: lib.rs  res.rs
backend/app/src/context/: contest.rs  mod.rs
backend/app/src/filters/: auth.rs
backend/app/src/routes/: mod.rs
backend/appengine/: Dockerfile  app.yaml  build-with-env.sh  fetch_secrets.py
backend/crop/: Cargo.toml
backend/crop/src/: main.rs
backend/crop_app/: Cargo.toml
backend/crop_app/src/: auth.rs  failure_response.rs  infra_manager.rs  lib.rs  req.rs  routes.rs  server.rs  ws.rs
backend/crop_app/src/routes/: cronjob.rs  markets.rs  prizes.rs  users.rs
backend/crop_client/: Cargo.toml  README.md
backend/crop_client/src/: lib.rs
backend/crop_domain/: Cargo.toml
backend/crop_domain/src/: lib.rs  lmsr.rs  market.rs  point.rs  user.rs
backend/crop_domain/src/account/: model.rs  repository.rs
backend/crop_domain/src/admin/: model.rs  repository.rs  service.rs
backend/crop_domain/src/contest/: mod.rs  model.rs  repository.rs
backend/crop_domain/src/market/: model.rs  models.rs  num.rs  order.rs  repository.rs  service.rs
backend/crop_domain/src/num/: point.rs
backend/crop_domain/src/poll/: model.rs
backend/crop_domain/src/user/: models.rs  repository.rs  services.rs
backend/crop_infra/: Cargo.toml  Makefile  diesel.toml
backend/crop_infra/migrations/2019-11-04-095749_init/: down.sql  up.sql
backend/crop_infra/src/: jwt.rs  lib.rs  mailgun.rs  postgres.rs
backend/crop_infra/src/pg/: admin.rs  (+9 more)
backend/crop_primitive/: Cargo.toml
backend/crop_primitive/src/: lib.rs  non_empty_string.rs  non_empty_vec.rs  string.rs
backend/crop_primitives/: Cargo.toml
backend/crop_primitives/src/: lib.rs  vec.rs
backend/crop_server/: Cargo.toml
backend/crop_server/api/: Cargo.toml  accounts__post__req.json  accounts__post__res.json  admins_me_access_tokens__post__req.json  admins_me_access_tokens__post__res.json  contests__get__res.json  contests__post__req.json  contests__post__res.json  contests_id__get__res.json  contests_id_polls__post__req.json  contests_id_polls__post__res.json  contests_id_polls_id__patch__req.json
backend/crop_server/src/: context.rs  error.rs  lib.rs  main.rs  response.rs  routes.rs  rpc.rs  server.rs  state.rs  ws.rs
backend/demo/: data.py  prepare.py
backend/dev-tools/: set-envs.sh
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs
backend/examples/: print_sample_credential.rs
backend/infra/: Cargo.toml  Makefile  diesel.toml
backend/infra/src/: lib.rs
backend/lib/: access_token.py  lmsr.py  market.py  market_observer.py
backend/lib/api/: accesstoken.py  cron.py  market.py  me.py  order.py  server.py
backend/migrations/2019-04-16-232616_initialize/: up.sql
backend/migrations/2019-09-17-083640_token_display_index/: down.sql  up.sql
backend/migrations/2019-09-17-140008_fix_typo/: down.sql  up.sql
backend/migrations/2019-09-21-151303_point_system/: down.sql  up.sql
backend/migrations/2019-11-04-095749_init/: down.sql  up.sql
backend/primitive/: Cargo.toml
backend/primitive/src/: string.rs
backend/rohan/: db.py  market.py  server.py  user.py
backend/rohan/api/: login.py  me.py  response.py  server.py  user.py
backend/src/: access_token.py  app.rs  db.py  domain.rs  infra.rs  lib.rs  lmsr.py  main.py  main.rs  market.py  market_observer.py  primitive.rs
backend/src/api/: accesstoken.py  login.py  market.py  me.py  order.py  server.py
backend/src/app/: auth.rs  errors.rs  failure_response.rs  infra_manager.rs  markets.rs  me.rs  prizes.rs  req.rs  routes.rs  users.rs
backend/src/domain/: access_token.rs  lmsr.rs  market.rs  num.rs  organizer.rs  point.rs  prize.rs  services.rs  user.rs
backend/src/infra/: firebase.rs  jwt.rs  mailgun.rs  pg_redis.rs  postgres.rs  redis.rs  store.rs
backend/src/primitive/: num.rs  string.rs  vec.rs
backend/tests/: init_data.sql  run-all.sh  run.sh  scenario_01.py  test_db.py
backend/tests/data/: csv2sql.sh  market.py  test_raw_data.sql  user.py
backend/tests/scenarios/: scenario_01.py  scenario_market_reward.py  scenario_signin.py
backend/tools/: Cargo.toml  create_market.py  create_user.py  market.sample.json  settle.py
backend/tools/src/: main.rs
backend/utils/: Cargo.toml
backend/utils/src/: market.rs
(+473 files in other folders)
