[package]
name = "eagna"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[lib]
name = "libeagna"
path = "src/lib.rs"

[[bin]]
name = "eagna"
path = "src/main.rs"

[dependencies]
rouille = "~3.0"
reqwest = "~0.9"
redis = "~0.10"
diesel = { version = "~1.4", features = ["postgres", "chrono", "uuid", "uuidv07"] }
diesel-derive-enum = { version = "~0.4", features = ["postgres"] }
serde = { version = "~1.0", features = ["derive", "rc"] }
chrono = { version = "~0.4", features = ["serde"] }
num-rational = "~0.2"
arrayvec = { version = "~0.4", features = ["serde-1"] }
lazycell = "~1.2"
lazy_static = "~1.4"
regex = "~1.3"
data-encoding = "~2.1"
ring = "~0.16"
rand = "~0.7"
sha2 = "~0.8"
uuid = { version = "~0.7", features = ["v4", "serde"] }
failure = "~0.1"
derive_more = "~0.15"
getset = "~0.0.8"
log = "~0.4"
env_logger = "~0.6"
