[package]
name = "crop_client"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
tokio-tungstenite = "0.10"

[[bin]]
name = "client-cli"
path = "src/bin/main.rs"
