[package]
name = "crop_domain"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[dependencies]
crop_primitive = { path = "../crop_primitive" }
crop_infra = { path = "../crop_infra" }

anyhow = "1.0"
arrayvec = "0.5"
chrono = { version = "~0.4", features = ["serde"] }
derive_more = "~0.99"
rand = "~0.7"
schemars = { git = "https://github.com/AtsukiTak/schemars.git", features = ["uuid", "chrono"] }
serde = { version = "~1.0", features = ["derive", "rc"] }
uuid = { version = "~0.8", features = ["v4", "serde"] }
