[package]
name = "crop_domain"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[dependencies]
crop_primitive = { path = "../crop_primitive" }
crop_infra = { path = "../crop_infra" }

anyhow = "1.0"
arrayvec = "0.5"
chrono = { version = "~0.4", features = ["serde"] }
data-encoding = "2.1"
derive_more = "~0.99"
lazy_static = "1.4"
rand = "~0.7"
ring = "~0.16"
schemars = { version = "0.7", features = ["uuid", "chrono"] }
serde = { version = "~1.0", features = ["derive", "rc"] }
uuid = { version = "~0.8", features = ["v4", "serde"] }
