[package]
name = "crop_infra"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[lib]
name = "crop_infra"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "~0.12"
chrono = { version = "~0.4", features = ["serde"] }
diesel = { version = "~1.4", features = ["postgres", "chrono", "uuid", "uuidv07"] }
diesel-derive-enum = { version = "~0.4", features = ["postgres"] }
hyper = "~0.13"
hyper-tls = "~0.4"
jsonwebtoken = "7.0.0-beta.1"
lazy_static = "1.4"
lazycell = "~1.2"
log = "~0.4"
rand = "~0.7"
regex = "~1.3"
ring = "~0.16"
serde = { version = "~1.0", features = ["derive", "rc"] }
serde_urlencoded = "~0.6"
tokio = { version = "~0.2", features = ["macros", "rt-threaded"] }
uuid = { version = "~0.8", features = ["v4", "serde"] }
