[package]
name = "domain"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
