[package]
name = "domain"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive = { path = "../primitive" }

anyhow = "1.0"
arrayvec = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.1"
rand = "0.7"
ring = "0.16"
schemars = { version = "0.7", features = ["uuid", "chrono"] }
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
