[package]
name = "primitive"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
jsonwebtoken = "7.0.0-beta.1"
lazycell = "1.2"
schemars = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
smallvec = "1.4"

[dev-dependencies]
serde_test = "1.0"
