[package]
name = "api"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "~0.7", features = ["v4", "serde", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
