[package]
name = "api"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "~0.7", features = ["v4", "serde", "wasm-bindgen"] }

# For Client use
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

# For Server use
crop_domain = { path = "../../crop_domain", optional = true }
serde_json = { version = "1.0", optional = true }
warp = { version = "0.2", optional = true }

[features]
server = ["crop_domain", "serde_json", "warp"]
client = ["wasm-bindgen"]
